fixed layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,15 @@
   left: 0;
   height: 100vh;
   z-index: 30;
-  background-color: white; /* Optional */
+  background-image: linear-gradient(
+    to right,
+    #ff8177 0%,
+    #ff867a 0%,
+    #ff8c7f 21%,
+    #f99185 52%,
+    #cf556c 78%,
+    #b12a5b 100%
+  );
 }
 
 .content-container {
